--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "preact": "^10.3.1",
     "preact-render-to-string": "^5.1.4",
-    "preact-router": "^3.2.1"
+    "preact-router": "^3.2.1",
+    "semantic-ui-react": "^2.1.2"
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.5",
